@@ -4,18 +4,17 @@ declare a as array 9 of int
 
 set c++
 declare f as non-returning function (int) returning void
+declare [] as operator (int) returning int
+explain <:<:noreturn:>:> void f(int)
+struct S { typedef int I; }
+struct T <% typedef int I; %>
+show typedef
 
 set c
 explain int a<:9:>
 
 set c89
 explain int a<:9:>
-
-set c++
-explain <:<:noreturn:>:> void f(int)
-struct S { typedef int I; }
-struct T <% typedef int I; %>
-show typedef
 
 set nographs
 declare a as array 9 of int
